improve static analysis